--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,6 +7,8 @@
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <a class="nav-link text-dark" asp-area="" asp-page="/Lab5Page">Lab5</a>
+
 </div>
 <main>
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
@@ -115,6 +117,7 @@
             <td></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
           </tr>
+
         </tbody>
       </table>
     </div>
