--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -23,6 +23,9 @@
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Enterprise</a>
         <a class="me-3 py-2 link-body-emphasis text-decoration-none" href="#">Support</a>
         <a class="py-2 link-body-emphasis text-decoration-none" href="#">Pricing</a>
+        <a class="py-3 link-body-emphasis text-decoration-none" href="/Lab5Page">Lab5</a>
+
+
       </nav>
     </div>
 
